--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 								<li><a
 										href="https://docs.google.com/document/d/1dZckwCNhFTnl8pk3UNjlFmyxCr4HAvH5KWhLV7aG5h8/"><span
-											class="label">resume</span></a></li>
+											class="label">Resume</span></a></li>
 
 							</ul>
 						</header>
