--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<header>
 							<h1>Sachi Shrestha<br />
 							</h1>
-							<p>Data Analysis enthusiast</p>
+							<p>Data Science enthusiast</p>
 							<ul class="icons">
 								<li><a href="https://github.com/sachishrestha" class="icon brands fa-github"><span
 											class="label">github</span></a></li>
