--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<p>Cleaned, sorted, and analysed the data avaiable in foursquare website about the restaurent. 
               about a best place to open a restaurent in NY. </p>
 							<ul class="actions">
-								<li><a href="https://github.com/sachishrestha/Capstone-Project/blob/master/Final%20project%20exploring%20Bronx.ipynb" class="button">Github</a>
+								<li><a href="https://github.com/sachishrestha/Capstone-Project" class="button">Github</a>
 								</li>
 							</ul>
 						</article>
