--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h3> Boston Housing Raw Data Analysis</h3>
 							<p>Analyzed Boston housing information to determined the co-dependent foactor for the rent.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/sachishrestha/Boston-Housing-Analysis/blob/main/Boston%20housing%20-you%20tube%20tutorial.ipynb" class="button">Github</a></li>
+								<li><a href="https://github.com/sachishrestha/Boston-Housing-Analysis" class="button">Github</a></li>
 							</ul>
 						</article>
 						<article>
@@ -89,7 +89,7 @@
 							<h3>Data Visualization</h3>
 							<p>Data  visualization using python libraries on Jupyter Nootbook.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/sachishrestha/Data-visualization/blob/master/data%20visualization.ipynb" class="button">Github</a></li>
+								<li><a href="https://github.com/sachishrestha/Data-visualization" class="button">Github</a></li>
 							</ul>
 						</article>
 						<article>
@@ -99,7 +99,7 @@
 							<h3>Sales Analysis</h3>
 							<p>Sales Analysis of a gift shop with trends and visualization using python libraries on a Jupyter Notebook </p>
 							<ul class="actions">
-								<li><a href="https://github.com/sachishrestha/Sales-Analysis/blob/main/Analysis.ipynb" class="button">Github</a>
+								<li><a href="https://github.com/sachishrestha/Sales-Analysis" class="button">Github</a>
 								</li>
 							</ul>
 						</article>
